    HIGHLIGHTS.txt in the same directory as this file.

Version 5.0  [ (under development) ]

    OVERALL:
        - TODO: List all the new classes and tests relating to 4-manifolds.
    ENGINE:
        Class NPerm5:
            - New class describing permutations of five elements, which
              we need in order to describe 4-manifold triangulations.
    TEST SUITE:
        - Added very thorough tests for NPerm5.

Version 4.6.1  [ (under development) ]

    ENGINE:
        Typedef AcceptTriangulation:
            - This global typedef has been deprecated.  Please use the
              class typedef NCensus::AcceptTriangulation instead.
        Class NCensus:
            - New class typedef NCensus::AcceptTriangulation to replace the
              old global typedef AcceptTriangulation.
        Class NPerm:
            - New routines S4Index() and orderedS4Index() for reverse
              lookups into the arrays NPerm::S4 and NPerm::orderedS4.
        Class NPerm3:
            - New class describing permutations of three elements.  This
              is extremely fast, using lookup tables for all calculations.

Version 4.6  [ 16 May, 2009 ]

    OVERALL:
        - Deprecated everything relating to the non-standard STL/g++ classes
          hash_set and hash_map, for the sake of portability.
        - Added a "deprecation guide" to the website, with a table listing
          the outdated routines/classes/etc. to be removed in Regina 5.0 and
          the corresponding new routines/classes/etc. that replace them.
    ENGINE:
        Class HashPointer, HashString:
            - Deprecated, along with everything else relating to the hash_set
              and hash_map classes.  See the "overall" notes above.
        Class NBoundaryComponent, NComponent, NEdge, NFace, NVertex:
            - All constructors for skeletal objects are now private, since
              only the triangulation skeletal routines should be creating them.